cambiar los colores de toda la pagina

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
             <section id="home" class="banner">
                 <div id="video-container">
                     <video playsinline autoplay muted loop id="myVideo">
-                        <source src="banner/banner_home_2.mp4" type="video/mp4">
+                        <source src="banner/world_-_1992 (540p).mp4" type="video/mp4">
                     </video>
                 </div>
                 <img class="profile-image" src="media/AndreaRodriguez.jpg" alt="Jason Martinez">
