modificacion de todas las secciones

--- a/index.html
+++ b/index.html
@@ -50,9 +50,7 @@
             <section id="about" class="vision">
                 <h2>Perfil</h2>
                 <h4>Negociación| Business Intelligence| Comunicación asertiva|Gestión de proyectos| Metodologías agiles| Herramientas ofimáticas|Pensamiento crítico|Resolución de problemas| Storytelling Gestión de Recursos| Trabajo colaborativo|Evaluación y selección de proveedores| Servicio de atención al cliente| Gestión de relaciones con clientes (CRM)| Análisis de política|Retención y Atracción de talentos.</h4>
-                <p>Con más de 15 años de experiencia en la gestión de cuentas corporativas a través de acuerdos de servicio, aplicando análisis e indicadores para la toma de decisiones y la obtención de resultados.</p> 
-                <p>Propuesta e impulso de proyectos innovadores que contribuyen a la consecución de objetivos, implemento cambios estratégicos para la mejora continua.</p>
-                <p>Enfoque en la búsqueda y aplicación de estrategias de comunicación efectivas y en el desarrollo de equipos mediante la implementación de capacitaciones.</p>                       
+                <p>Experta en Mercadeo con más de 15 años de experiencia en la gestión de cuentas corporativas, aplicando análisis de datos e indicadores para la toma de decisiones y la obtención de resultados. He desarrollado e implementado proyectos innovadores y creativos, contribuyendo al logro de objetivos y liderando cambios estratégicos para la mejora continua. Mi enfoque se centra en la búsqueda y aplicación de estrategias de comunicación efectivas y en el desarrollo de equipos mediante la implementación de capacitaciones.</p>                       
             </section>
 
             <section id="skills" class="habilidades">
@@ -62,76 +60,30 @@
                 <p>Para la presentación y visualización de los resultados obtenidos del correcto tratamiento de los datos, utilicé tableros de control con Power BI y Looker Studio.</p>
                 <img src="media/PowerBI.png">
                 <img src="media/Looker.png">
-                <p>Durante la fase de ETL me apoyo usando un ambiente de desarrollo Linux, empleando librerías del lenguaje de programación de Python como Matplotlib y Seaborn, para la visualización de datos.</p>
-                <img src="media/Ubuntu.png">
-                <img src="media/Python.png">
-                <img src="media/Matplot.png">
-                <img src="media/Seaborn.png">
-                <p>Para el tratamiento de datos, utilicé ambientes Linux o, directamente desde Windows, el editor de código Visual Studio Code, junto con las librerías Pandas, Numpy y PostgreSQL.</p>
-                <img src="media/Pandas.png">
-                <img src="media/NumPy.png">
-                <img src="media/Postgresql.png">
-                <p>Para los análisis de pronósticos, me apoyé en Scikit-learn, una librería especializada en machine learning, obteniendo resultados de regresiones lineales, regresión logística, random forest y clustering.</p>
-                <img src="media/Scikit.png">
-                <p>Además, quiero confirmar que he creado esta página utilizando el editor de código Visual Studio Code. Para su desarrollo, he empleado los lenguajes de programación HTML5, CSS, JavaScript y D3. Asimismo, he gestionado las versiones del proyecto con Git y administrado el repositorio en GitHub.</p>
-                <img src="media/Visual Studio Code.png">
-                <img src="media/HTML5.png">
-                <img src="media/CSS.png">
-                <img src="media/JavaScript.png">
-                <img src="media/d3.png">
-                <img src="media/Git.png">
-                <img src="media/GitHub.png">
+                <p>🏆 Estrategias de ventas, mercadeo tradicional y digital, ATL y BTL, SEO y SEM.</p>
+                <p>🏆 Investigación de mercados y estudios de competencia.</p>
+                <p>🏆 Gestión comercial, CRM, servicio educativo y manejo de equipos e indicadores.</p>
+                <p>🏆 Habilidades de liderazgo, comunicación, servicio, resolución de problemas y toma de decisiones.</p>
             </section>
 
             <section id="projects" class="proyectos">
                 <h2>Portafolio</h2>
-                <p>¡Bienvenidos a mi sección de proyectos! Aquí encontrarán una diversidad de proyectos que he desarrollado en las áreas de Data Analytics, Data Science y Data Engineering. Cada proyecto es el resultado de un análisis exhaustivo y la aplicación de diversas técnicas y herramientas, utilizando conjuntos de datos públicos. Estos proyectos reflejan mi compromiso con la excelencia y la innovación en el campo del análisis de datos. ¡Disfruten explorando!</p>
-                <h4>Data Scientist</h4>
+                <p>La sinergia entre el trabajo y la pasión experimenta una metamorfosis única: cada esfuerzo reverbera con dedicación, los desafíos se transmutan en oportunidades, y cada día se revela como una página inédita en el libro de tu propósito. En este universo donde la pasión se convierte en propósito, el trabajo no es simplemente una tarea, sino una forma de arte. Te extiendo una cordial invitación a explorar mi portafolio, donde cada proyecto es una manifestación de esta conexión profunda entre la labor diaria y la chispa creativa que lo impulsa.</p>
                 <div class="container">
                     <img class="control prev" src="./ico/img1.png" alt="">
                     <div class="slider">
                         <ul>
                             <li>
-                                <a href="Projects/KPCA.html">
-                                <img src="./img/Miniaturas/KPCA.jpg" href="Projects/KPCA.html">
+                                <a href="https://www.behance.net/gallery/189117339/Navegando-el-Desafio-de-Mantenernos-Informados">
+                                <img src="./img/Miniaturas/Navegando_el_Desafío_de_Mantenernos_Informados.jpg" href="Projects/KPCA.html">
                                 </a>
-                                <a href="Projects/KPCA.html">Modelo KPCA: Optimizando la Reordenación de Compras en Línea en EE.UU.</a>
+                                <a href="https://www.behance.net/gallery/189117339/Navegando-el-Desafio-de-Mantenernos-Informados">Navegando el Desafío de Mantenernos Informados</a>
                             </li>
                             <li>
-                                <a href="Projects/PCA-IPCA.html">
-                                    <img src="./img/Miniaturas/PCA-IPCA.jpg">
+                                <a href="https://www.behance.net/gallery/189042207/Transformacion-Cultural">
+                                    <img src="./img/Miniaturas/Transformacion_Cultural.jpg">
                                 </a>
-                                <a href="Projects/PCA-IPCA.html">PCA vs IPCA: Comparando Modelos en la Optimización de la Reordenación de Compras en Línea en EE.UU.</a>
-                            </li>
-                            <li>
-                                <a href="Projects/Regresión_lineal.html">
-                                    <img src="./img/Miniaturas/Regresión Lineal.jpg">
-                                </a>    
-                                <a href="Projects/Regresión_lineal.html">Regresión Lineal: Prediciendo Calorías a partir del Consumo de Café en Starbucks</a>
-                            </li>
-                            <li>
-                                <a href="Projects/Cluster.html">
-                                <img src="./img/Miniaturas/Cluster.jpg" href="Projects/Cluster.html">
-                                </a>
-                                <a href="Projects/Cluster.html">Cluster: Análisis de Diamantes Utilizando K-Means y Mean-Shift para la Segmentación del Mercado</a>
-                            </li>
-                            <li>
-                                <a href="Projects/Estimadores.html">
-                                <img src="./img/Miniaturas/Estimadores.jpg" href="Projects/Estimadores.html">
-                                </a>
-                                <a href="Projects/Estimadores.html">Estimadores: Comparación de Precisión entre Bagging y Boosting en un e commerce</a>
-                            </li>
-                            <li>
-                                <a href="Projects/Optimizacion_parametrica.html">
-                                <img src="./img/Miniaturas/Optimización parametrica.jpg" href="Projects/Optimizacion_parametrica.html">
-                                </a>
-                                <a href="Projects/Optimizacion_parametrica.html">Optimización Paramétrica: Evaluación y Ajuste de Modelos de Regresión con Cross Validation y RandomizedSearchCV</a>
-                            </li>
-                            <li>
-                                <a href="Projects/Regresion_robusta.html">
-                                <img src="./img/Miniaturas/Regresión robusta.jpg" href="Projects/Regresion_robusta.html">
-                                </a>
-                                <a href="Projects/Regresion_robusta.html">Regresión Robusta: Evaluación de SVR, RANSAC y Huber en la Predicción de Precios de Ventas Inmobiliarias</a>
+                                <a href="https://www.behance.net/gallery/189042207/Transformacion-Cultural">Transformación Cultural</a>
                             </li>
                         </ul>
                     </div>
@@ -141,30 +93,25 @@
 
             <section id="analysis" class="analisis">
                 <h2>Análisis en Profundidad</h2>            
-                <p>En mis dos recientes posiciones laborales, he trabajado en proyectos orientados al ahorro y la mejora continua de los procesos.</p>
-                <img src="media/Scotiabank.png">               
-                <p>✅ En Scotiabank, participé en la creación de un tablero de control para el área de cobranzas. Este tablero, desarrollado en Power BI, permitía monitorizar la calidad de las llamadas de cada asesor y publicar sus indicadores y oportunidades de mejora, facilitando así un servicio de alta calidad.</p>
+                <p>En mi ultima posición laborale, he trabajado en proyectos orientados al ahorro y la mejora continua de los procesos.</p>
                 <img src="media/CruzVerde.png">
-                <p>✅ En Cruz Verde, desarrollé dos proyectos significativos. El primero consistió en medir eficazmente la productividad de todas las unidades de negocio, tanto en retail como en dispensación. Este proyecto implicó la recolección de información de diversas áreas, la limpieza de datos (como ausentismos, horas extra, recargos nocturnos, planta activa, planta faltante) y la correcta agrupación de las bases para visualizar los resultados. Dada la gran cantidad de información, tuve que aplicar técnicas de big data.</p>
-                <p>✅ El segundo proyecto fue la creación de una página web y un chatbot como asistente personal, principalmente para los auxiliares de droguería, pero también útil para cualquier colaborador que decidiera utilizarlo. Este asistente personal estaba seccionado con los temas que generaban más dudas en las diferentes áreas. Cuando el asistente no tenía la respuesta, dirigía a la persona al experto correspondiente. Además, el chat indicaba al auxiliar qué campaña de ventas se estaba implementando en el día y le recomendaba, según su cédula de usuario, qué productos podría ofrecer para aumentar las ventas. Este proyecto permitió la integración de diferentes áreas que estaban aisladas, definir personas de cada área para que pudieran estar al tanto de la información y establecer reuniones periódicas entre todos para una mejora continua.</p>
+                <p>✅ La implementación de nuestra aplicación One App en un periodo de 4 meses para más de 700 sucursales representa un hito significativo en la optimización de la productividad empresarial. Nuestra solución digital, diseñada para la gestión de sucursales, destaca por su efectividad y facilidad de uso.
+                </p>
+                <p>
+                En tan solo unas semanas, esta aplicación revolucionaria simplifica la comunicación, coordinación, supervisión y soporte de tus sucursales. El objetivo principal es potenciar la ejecución de la estrategia comercial, garantizando al mismo tiempo una operación más eficiente. Este proceso de implementación no solo representa un cambio tecnológico, sino una transformación integral en la forma en que tu empresa aborda la gestión de sucursales.</p>
+                <p>✅ Desarrollé dos proyectos significativos. El primero consistió en medir eficazmente la productividad de todas las unidades de negocio, tanto en retail como en dispensación. Este proyecto implicó la recolección de información de diversas áreas, la limpieza de datos (como ausentismos, horas extra, recargos nocturnos, planta activa, planta faltante) y la correcta agrupación de las bases para visualizar los resultados. Dada la gran cantidad de información, tuve que aplicar técnicas de big data.</p>
+                <p>✅ La creación de una página web y un chatbot como asistente personal, principalmente para los auxiliares de droguería, pero también útil para cualquier colaborador que decidiera utilizarlo. Este asistente personal estaba seccionado con los temas que generaban más dudas en las diferentes áreas, generamos un sistema LMS. Cuando el asistente no tenía la respuesta, dirigía a la persona al experto correspondiente. Además, el chat indicaba al auxiliar qué campaña de ventas se estaba implementando en el día y le recomendaba, según su cédula de usuario, qué productos podría ofrecer para aumentar las ventas. Este proyecto permitió la integración de diferentes áreas que estaban aisladas, definir personas de cada área para que pudieran estar al tanto de la información y establecer reuniones periódicas entre todos para una mejora continua.</p>
             </section>
 
             <section id="certifications" class="certificaciones">
                 <h2>Certificaciones y Educación</h2>
                 <p>Mi trayectoria educativa se compone de:</p>
-                <p>🥇 Ingeniero industrial (Universidad UNITEC).</p>
-                <img src="media/Unitec.png">
-                <p>🏅 Data Analyst (Platzi).</p>
-                <a href="https://platzi.com/p/Martinezjason/ruta/8267-data-analyst/diploma/detalle/" target="_blank">
-                    <img src="media/DataAnalyst.JPG">
+                <p>🥇 GRADO MÁSTER EN MARKETING FARMACÉTICO (Universidad Nebrija).</p>
+                <img src="media/Nebrija.png">
+                <p>🏅 GRADO PROFESIONAL DE MERCADEO Y PUBLICIDAD (Fundación Universitaria Compensar).</p>
                 </a>
-                <p>🏅 Data Scientist (Platzi).</p>
-                <a href="https://platzi.com/p/Martinezjason/ruta/8307-data-scientist-python/diploma/detalle/" target="_blank">
-                    <img src="media/DataScientist.JPG">
-                </a>  
-                <p>🏅 Data Engineer (Platzi).</p>
-                <a href="https://platzi.com/p/Martinezjason/ruta/8323-data-engineer/diploma/detalle/" target="_blank">
-                    <img src="media/DataEngineer.JPG">
+                <p>🏅 GRADO DIPLOMADO DESARROLLO DE CAMPAÑAS EN MARKETING DIGITAL (Fundación Universitaria Compensar).</p>
+                <img src="media/Compensar.png">
                 </a> 
             </section>
 
@@ -172,21 +119,9 @@
                 <h2>Testimonios</h2>
                 <div class="testimonial">
                     <img src="./media/CruzVerde.png" alt="Cliente 1">
-                    <h3>Andrea Rodriguez</h3>
+                    <h3>Jason Martinez</h3>
                     <h4>Coordinadora</h4>
                     <p>“Jason es bastante hábil trabajando con personas, su inteligencia e integridad son realmente destacables.”</p>
-                </div>
-                <div class="testimonial">
-                    <img src="./media/Scotiabank.png" alt="Cliente 2">
-                    <h3>Ruth Vasquez</h3>
-                    <h4>Gerente</h4>
-                    <p>“Jason destaca por su excepcional habilidad para el análisis crítico, una cualidad tan infrecuente que es comparable a hallar una aguja en un pajar.”</p>
-                </div>
-                <div class="testimonial">
-                    <img src="./media/Atento.jpg" alt="Cliente 3">
-                    <h3>Steve Agudelo</h3>
-                    <h4>Coordinador</h4>
-                    <p>“El carácter de Jason es firme y constante, sin importar las dificultades que enfrenta.”</p>
                 </div>
             </section>
             
