modificar testimonios, agregar iconos del portafolio

--- a/index.html
+++ b/index.html
@@ -118,10 +118,10 @@
             <section id="testimonials" class="testimonios">
                 <h2>Testimonios</h2>
                 <div class="testimonial">
-                    <img src="./media/CruzVerde.png" alt="Cliente 1">
+                    <img src="./media/Iqvia.png" alt="Cliente 1">
                     <h3>Jason Martinez</h3>
-                    <h4>Coordinadora</h4>
-                    <p>“Jason es bastante hábil trabajando con personas, su inteligencia e integridad son realmente destacables.”</p>
+                    <h4>Supplier Services Coordinator</h4>
+                    <p>“Andrea es bastante hábil trabajando con personas, su inteligencia e integridad son realmente destacables.”</p>
                 </div>
             </section>
             
