se ingresa el proyecto de: Nuestra solución a un clic

--- a/index.html
+++ b/index.html
@@ -85,6 +85,12 @@
                                 </a>
                                 <a href="https://www.behance.net/gallery/189042207/Transformacion-Cultural">Transformación Cultural</a>
                             </li>
+                            <li>
+                                <a href="https://www.behance.net/gallery/189507607/Nuestra-solucion-a-un-clic">
+                                    <img src="./img/Miniaturas/Bot.jpg">
+                                </a>
+                                <a href="https://www.behance.net/gallery/189507607/Nuestra-solucion-a-un-clic">Nuestra solución a un clic</a>
+                            </li>
                         </ul>
                     </div>
                     <img class="control next" src="./ico/img2.png" alt="">
