se corrige texto en la sección de analisis y se arregla el tamaño de las imagenes de la sección certificaciones en la parte responsive

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
 
             <section id="analysis" class="analisis">
                 <h2>Análisis en Profundidad</h2>            
-                <p>En mi ultima posición laborale, he trabajado en proyectos orientados al ahorro y la mejora continua de los procesos.</p>
+                <p>En mi ultima posición laboral, he trabajado en proyectos orientados al ahorro y la mejora continua de los procesos.</p>
                 <img src="media/CruzVerde.png">
                 <p>✅ La implementación de nuestra aplicación One App en un periodo de 4 meses para más de 700 sucursales representa un hito significativo en la optimización de la productividad empresarial. Nuestra solución digital, diseñada para la gestión de sucursales, destaca por su efectividad y facilidad de uso.
                 </p>
@@ -135,9 +135,12 @@
             <section id="contact" class="contacto">
                 <h2>Contacto</h2>
                 <p>Si tienes alguna pregunta, sugerencia o simplemente quieres ponerte en contacto conmigo, no dudes en hacerlo. Aquí te dejo algunas formas de contactarme:</p>
-                <i class="lni lni-envelope"></i>
-                <p>Puedes enviarme un correo a <a href="mailto:marod723@gmail.com">marod723@gmail.com</a> intentaré responder lo más pronto posible..</p>
-                
+                                
+                <a href="mailto:marod723@gmail.com" target="_blank">
+                    <i class="lni lni-envelope"></i>
+                    <p>Puedes enviarme un correo a <a href="mailto:marod723@gmail.com">marod723@gmail.com</a> intentaré responder lo más pronto posible..</p>
+                </a>  
+
                 <a href="https://www.linkedin.com/in/martha-andrea-rodriguez-504b71256/" target="_blank">
                     <i class="lni lni-linkedin-original"></i>
                     <p>/martha-andrea-rodriguez-504b71256/</p>
