se ingresa nuevo proyecto 'Arquetipos' y se ingresan etiquetas meta para posicionamiento SEO

--- a/index.html
+++ b/index.html
@@ -4,8 +4,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="description" content="Andrea Rodriguez: especialista en marketing, mercadeo y análisis de datos
+    Ayudo a empresas a analizar, visualizar y potenciar sus marcas">
+    <link rel="canonical" href="https://lordjasonmartinez.github.io/AndreaRogriguez/"
 
-    <title>Jason Martínez</title>
+    <title>Andrea Rodriguez portafolio</title>
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="https://cdn.lineicons.com/2.0/LineIcons.css">
 </head>
@@ -74,6 +77,12 @@
                     <div class="slider">
                         <ul>
                             <li>
+                                <a href="https://www.behance.net/gallery/189507607/Nuestra-solucion-a-un-clic">
+                                    <img src="./img/Miniaturas/Bot.jpg">
+                                </a>
+                                <a href="https://www.behance.net/gallery/189507607/Nuestra-solucion-a-un-clic">Nuestra solución a un clic</a>
+                            </li>
+                            <li>
                                 <a href="https://www.behance.net/gallery/189117339/Navegando-el-Desafio-de-Mantenernos-Informados">
                                 <img src="./img/Miniaturas/Navegando_el_Desafío_de_Mantenernos_Informados.jpg" href="Projects/KPCA.html">
                                 </a>
@@ -86,10 +95,10 @@
                                 <a href="https://www.behance.net/gallery/189042207/Transformacion-Cultural">Transformación Cultural</a>
                             </li>
                             <li>
-                                <a href="https://www.behance.net/gallery/189507607/Nuestra-solucion-a-un-clic">
-                                    <img src="./img/Miniaturas/Bot.jpg">
+                                <a href="https://www.behance.net/gallery/190255531/Cultivando-el-talento-con-beneficios-e-incentivos">
+                                    <img src="./img/Miniaturas/Arquetipos.jpg">
                                 </a>
-                                <a href="https://www.behance.net/gallery/189507607/Nuestra-solucion-a-un-clic">Nuestra solución a un clic</a>
+                                <a href="https://www.behance.net/gallery/190255531/Cultivando-el-talento-con-beneficios-e-incentivos">Cultivando el talento con beneficios e incentivos</a>
                             </li>
                         </ul>
                     </div>
