se ingresan dos proyectos

--- a/index.html
+++ b/index.html
@@ -100,6 +100,20 @@
                                 </a>
                                 <a href="https://www.behance.net/gallery/190255531/Cultivando-el-talento-con-beneficios-e-incentivos">Cultivando el talento con beneficios e incentivos</a>
                             </li>
+                            <li>
+                                <a href="https://www.behance.net/gallery/191347209/Productividad-exponencial">
+                                    <img src="./img/Miniaturas/Productividad exponencial.jpg">
+                                </a>
+                                <a href="https://www.behance.net/gallery/191347209/Productividad-exponencial">
+                                    Productividad exponencial</a>
+                            </li>
+                            <li>
+                                <a href="https://www.behance.net/gallery/191301375/Conexiones-Productivas">
+                                    <img src="./img/Miniaturas/Conexiones productivas.jpg">
+                                </a>
+                                <a href="https://www.behance.net/gallery/191301375/Conexiones-Productivas">
+                                    Conexiones Productivas</a>
+                            </li>
                         </ul>
                     </div>
                     <img class="control next" src="./ico/img2.png" alt="">
