--- a/index.html
+++ b/index.html
@@ -52,8 +52,9 @@
             
             <section id="about" class="vision">
                 <h2>Perfil</h2>
-                <h4>Negociación| Business Intelligence| Comunicación asertiva|Gestión de proyectos| Metodologías agiles| Herramientas ofimáticas|Pensamiento crítico|Resolución de problemas| Storytelling Gestión de Recursos| Trabajo colaborativo|Evaluación y selección de proveedores| Servicio de atención al cliente| Gestión de relaciones con clientes (CRM)| Análisis de política|Retención y Atracción de talentos.</h4>
-                <p>Experta en Mercadeo con más de 15 años de experiencia en la gestión de cuentas corporativas, aplicando análisis de datos e indicadores para la toma de decisiones y la obtención de resultados. He desarrollado e implementado proyectos innovadores y creativos, contribuyendo al logro de objetivos y liderando cambios estratégicos para la mejora continua. Mi enfoque se centra en la búsqueda y aplicación de estrategias de comunicación efectivas y en el desarrollo de equipos mediante la implementación de capacitaciones.</p>                       
+                <h4>Coordinador Comercial | Gestión Estratégica de Proveedores y Clientes | Business Intelligence | Desarrollo de Cuentas Clave | Docente Universitario.</h4>
+                <p>Profesional en Mercadeo y Publicidad con más de 10 años de experiencia en la gestión de cuentas corporativas y optimización operativa. Mi trayectoria se caracteriza por una sólida experiencia en la prospección, negociación con proveedores y stakeholders, así como en el diseño, desarrollo de negocios y análisis de indicadores para la toma de decisiones fundamentadas.</p>
+                <p>He liderado la implementación de estudios de mercado, segmentación y posicionamiento de marcas y productos, contribuyendo al éxito de proyectos innovadores que han tenido un impacto significativo en la consecución de objetivos y la mejora continua. Mi enfoque comunicación hacia el talento humano se ha desarrollado a través de mi rol como formador de formadores, permitiéndome comprender las necesidades tanto internas como externas.</p>                       
             </section>
 
             <section id="skills" class="habilidades">
